Translated on translate.pretix.eu (Danish)
Currently translated at 70.0% (1568 of 2240 strings)

Translation: pretix/pretix
Translate-URL: https://translate.pretix.eu/projects/pretix/pretix/da/

powered by weblate

--- a/src/pretix/locale/da/LC_MESSAGES/django.po
+++ b/src/pretix/locale/da/LC_MESSAGES/django.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-03-16 11:32+0000\n"
-"PO-Revision-Date: 2018-03-19 22:00+0000\n"
+"PO-Revision-Date: 2018-03-20 10:55+0000\n"
 "Last-Translator: Ture Gjørup <ture@ignatz.dk>\n"
 "Language-Team: Danish "
 "<https://translate.pretix.eu/projects/pretix/pretix/da/>\n"
@@ -7585,12 +7585,12 @@ msgstr "%(count)s elementer"
 #: pretix/control/templates/pretixcontrol/pagination.html:38
 #: pretix/control/templates/pretixcontrol/pagination_huge.html:38
 msgid "Show per page:"
-msgstr ""
+msgstr "Vis pr. side:"
 
 #: pretix/control/templates/pretixcontrol/pagination_huge.html:14
 #, python-format
 msgid "Page %(page)s"
-msgstr ""
+msgstr "Side %(page)s"
 
 #: pretix/control/templates/pretixcontrol/search/orders.html:80
 msgid ""
@@ -7600,7 +7600,7 @@ msgstr "Ingen bestillinger du har adgang til matcher din søgning."
 
 #: pretix/control/templates/pretixcontrol/select2_widget.html:9
 msgid "Please enable JavaScript in your browser."
-msgstr ""
+msgstr "Aktiver venligst JavaScript i din browser."
 
 #: pretix/control/templates/pretixcontrol/subevents/delete.html:4
 #: pretix/control/templates/pretixcontrol/subevents/delete.html:6
@@ -7611,7 +7611,7 @@ msgstr "Slet dato"
 #: pretix/control/templates/pretixcontrol/subevents/delete.html:9
 #, python-format
 msgid "Are you sure you want to delete the date <strong>%(subevent)s</strong>?"
-msgstr ""
+msgstr "Er du sikker på du vil slette datoen <strong>%(subevent)s</strong>?"
 
 #: pretix/control/templates/pretixcontrol/subevents/detail.html:9
 msgctxt "subevent"
@@ -7637,7 +7637,7 @@ msgstr "Datohistorik"
 
 #: pretix/control/templates/pretixcontrol/subevents/index.html:11
 msgid "You haven't created any dates for this event series yet."
-msgstr ""
+msgstr "Du har endnu ikke oprettet nogen datoer for denne arrangementsrække."
 
 #: pretix/control/templates/pretixcontrol/subevents/index.html:18
 #: pretix/control/templates/pretixcontrol/subevents/index.html:40
@@ -7684,11 +7684,11 @@ msgstr ""
 
 #: pretix/control/templates/pretixcontrol/user/2fa_confirm_totp.html:39
 msgid "Add a new account to the app by scanning the following barcode:"
-msgstr ""
+msgstr "Tilføj en ny konto til app'en ved at scanne QR-koden:"
 
 #: pretix/control/templates/pretixcontrol/user/2fa_confirm_totp.html:43
 msgid "Can't scan the barcode?"
-msgstr ""
+msgstr "Kan du ikke scanne stregkoden?"
 
 #: pretix/control/templates/pretixcontrol/user/2fa_confirm_totp.html:49
 msgid "Use the \"provide a key\" option of your authenticator app."
@@ -7864,7 +7864,7 @@ msgstr "Historik"
 #: pretix/control/templates/pretixcontrol/user/notifications.html:4
 #: pretix/control/templates/pretixcontrol/user/notifications.html:6
 msgid "Notification settings"
-msgstr ""
+msgstr "Notifikationsindstillinger"
 
 #: pretix/control/templates/pretixcontrol/user/notifications.html:16
 msgid "Notifications are turned on according to the settings below."
@@ -7876,47 +7876,47 @@ msgstr ""
 
 #: pretix/control/templates/pretixcontrol/user/notifications.html:33
 msgid "Choose event"
-msgstr ""
+msgstr "Vælg arrangement"
 
 #: pretix/control/templates/pretixcontrol/user/notifications.html:37
 msgid "All my events"
-msgstr ""
+msgstr "Alle mine arrangementer"
 
 #: pretix/control/templates/pretixcontrol/user/notifications.html:45
 msgid "Save your modifications before switching events."
-msgstr ""
+msgstr "Gem dine ændringer før du skifter arrangement."
 
 #: pretix/control/templates/pretixcontrol/user/notifications.html:52
 msgid "Choose notifications to get"
-msgstr ""
+msgstr "Vælg de notifikationer du ønsker at modtage"
 
 #: pretix/control/templates/pretixcontrol/user/notifications.html:56
 msgid "Notification type"
-msgstr ""
+msgstr "Notifikationstype"
 
 #: pretix/control/templates/pretixcontrol/user/notifications.html:57
 msgid "E-Mail notification"
-msgstr ""
+msgstr "E-mail notifikation"
 
 #: pretix/control/templates/pretixcontrol/user/notifications.html:70
 msgid "Global"
-msgstr ""
+msgstr "Global"
 
 #: pretix/control/templates/pretixcontrol/user/notifications.html:70
 #: pretix/control/templates/pretixcontrol/user/notifications.html:72
 #: pretix/control/templates/pretixcontrol/user/settings.html:20
 msgid "On"
-msgstr ""
+msgstr "Til"
 
 #: pretix/control/templates/pretixcontrol/user/notifications.html:70
 #: pretix/control/templates/pretixcontrol/user/notifications.html:71
 #: pretix/control/templates/pretixcontrol/user/settings.html:24
 msgid "Off"
-msgstr ""
+msgstr "Fra"
 
 #: pretix/control/templates/pretixcontrol/user/notifications.html:75
 msgid "You have no permission to receive this notification"
-msgstr ""
+msgstr "Du har ikke rettigheder til at modtage denne notifikation"
 
 #: pretix/control/templates/pretixcontrol/user/reauth.html:10
 msgid ""
@@ -7941,11 +7941,11 @@ msgstr "Generelle indstillinger"
 
 #: pretix/control/templates/pretixcontrol/user/settings.html:16
 msgid "Notifications"
-msgstr ""
+msgstr "Notifikationer"
 
 #: pretix/control/templates/pretixcontrol/user/settings.html:29
 msgid "Change notification settings"
-msgstr ""
+msgstr "Skift notifikationsindstillinger"
 
 #: pretix/control/templates/pretixcontrol/user/settings.html:35
 msgid "Login settings"
@@ -7962,46 +7962,46 @@ msgstr "Vis kontohistorik"
 #: pretix/control/templates/pretixcontrol/users/create.html:4
 #: pretix/control/templates/pretixcontrol/users/create.html:6
 msgid "Create user"
-msgstr ""
+msgstr "Opret bruger"
 
 #: pretix/control/templates/pretixcontrol/users/create.html:11
 #: pretix/control/templates/pretixcontrol/users/form.html:23
 msgid "Base settings"
-msgstr ""
+msgstr "Basisindstillinger"
 
 #: pretix/control/templates/pretixcontrol/users/create.html:18
 #: pretix/control/templates/pretixcontrol/users/form.html:31
 msgid "Log-in settings"
-msgstr ""
+msgstr "Log-ind indstillinger"
 
 #: pretix/control/templates/pretixcontrol/users/form.html:10
 msgid "Send password reset email"
-msgstr ""
+msgstr "Send E-mail med link til nulstilling af kodeord"
 
 #: pretix/control/templates/pretixcontrol/users/form.html:14
 msgid "Impersonate user"
-msgstr ""
+msgstr "Udgiv dig for bruger"
 
 #: pretix/control/templates/pretixcontrol/users/form.html:38
 msgid "Team memberships"
-msgstr ""
+msgstr "Team medlemskaber"
 
 #: pretix/control/templates/pretixcontrol/users/form.html:43
 #, python-format
 msgid "Team \"%(team)s\" of organizer \"%(organizer)s\""
-msgstr ""
+msgstr "Team \"%(team)s\" af arrangører \"%(organizer)s\""
 
 #: pretix/control/templates/pretixcontrol/users/form.html:62
 msgid "User history"
-msgstr ""
+msgstr "Brugerhistorik"
 
 #: pretix/control/templates/pretixcontrol/users/form.html:71
 msgid "User created."
-msgstr ""
+msgstr "Bruger oprettet."
 
 #: pretix/control/templates/pretixcontrol/users/index.html:30
 msgid "Create a new user"
-msgstr ""
+msgstr "Opret en ny bruger"
 
 #: pretix/control/templates/pretixcontrol/vouchers/base.html:10
 msgid "All vouchers"
@@ -8112,7 +8112,7 @@ msgstr "Donwload liste"
 
 #: pretix/control/templates/pretixcontrol/vouchers/index.html:82
 msgid "Redemptions"
-msgstr ""
+msgstr "Indløsninger"
 
 #: pretix/control/templates/pretixcontrol/vouchers/index.html:83
 msgid "Expiry"
@@ -8172,6 +8172,11 @@ msgid ""
 "capacity is available, so don't worry if entries do not disappear here "
 "immediately. If you want, you can also send them out manually right now."
 msgstr ""
+"Du har valgt at vouchers automatisk bliver sendt til de personer på listen "
+"der har ventet længst så snart der er ledig kapacitet. Det kan tage op til "
+"en halv time fra kapaciteten bliver ledig til vouchers bliver sendt, derfor "
+"forsvinder de ikke her øjeblikkeligt. Hvis du ønsker det, kan de også "
+"udsendes manuelt nu."
 
 #: pretix/control/templates/pretixcontrol/waitinglist/index.html:36
 msgid ""
@@ -8197,6 +8202,9 @@ msgid ""
 "waiting list in, you could sell tickets worth an additional <strong>"
 "%(amount)s</strong>."
 msgstr ""
+"Hvis du kan skabe kapacitet ved dit arrangement til alle personer på "
+"ventelisten, kan du potentielt sælge billetter for yderligere "
+"<strong>%(amount)s</strong>."
 
 #: pretix/control/templates/pretixcontrol/waitinglist/index.html:82
 msgid "All entries"
@@ -8253,11 +8261,11 @@ msgstr "Ændr for alle arrangementer"
 
 #: pretix/control/views/__init__.py:145
 msgid "That page number is not an integer"
-msgstr ""
+msgstr "Sidetallet skal være et heltal"
 
 #: pretix/control/views/__init__.py:147
 msgid "That page number is less than 1"
-msgstr ""
+msgstr "Sidetallet er mindre end 1"
 
 #: pretix/control/views/auth.py:120
 msgid ""
@@ -8265,12 +8273,17 @@ msgid ""
 "address bar and make sure it is correct and that the link has not been used "
 "before."
 msgstr ""
+"Du har brugt et ugyldigt link. Prøv at kopiere linket fra din email til "
+"adresselinjen. Verificer at det er korrekt og at linket ikke allerede har "
+"været brugt."
 
 #: pretix/control/views/auth.py:126
 msgid ""
 "You cannot accept the invitation for \"{}\" as you already are part of this "
 "team."
 msgstr ""
+"Du kan ikke acceptere invitationen til \"{}\" da du allerede er del af det "
+"team."
 
 #: pretix/control/views/auth.py:140
 msgid "You are now part of the team \"{}\"."
@@ -8299,6 +8312,9 @@ msgid ""
 "address into your address bar. Please note that the link is only valid for "
 "three days and that the link can only be used once."
 msgstr ""
+"Du har klikket på et ugyldigt link. Undersøg venligst om du har kopieret den "
+"fulde url til adresselinjen. Bemærk at linket kun er gyldigt i tre dage og "
+"at linket kun kan bruges en gang."
 
 #: pretix/control/views/auth.py:233
 msgid "We were unable to find the user you requested a new password for."
