--- a/src/pretix/locale/da/LC_MESSAGES/django.po
+++ b/src/pretix/locale/da/LC_MESSAGES/django.po
@@ -4,8 +4,8 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-03-16 11:32+0000\n"
-"PO-Revision-Date: 2018-03-20 10:55+0000\n"
-"Last-Translator: Ture Gjørup <ture@ignatz.dk>\n"
+"PO-Revision-Date: 2018-03-20 12:46+0000\n"
+"Last-Translator: Mikkel Ricky <rimi@aarhus.dk>\n"
 "Language-Team: Danish "
 "<https://translate.pretix.eu/projects/pretix/pretix/da/>\n"
 "Language: da\n"
@@ -688,7 +688,7 @@ msgstr "Standardliste"
 #: pretix/base/models/auth.py:75 pretix/base/models/orders.py:928
 #: pretix/control/templates/pretixcontrol/users/index.html:42
 msgid "Full name"
-msgstr "Navn"
+msgstr "Fuldt navn"
 
 #: pretix/base/models/auth.py:77
 msgid "Is active"
@@ -2315,7 +2315,7 @@ msgstr "Forsalgs sluttidspunkt"
 
 #: pretix/base/reldate.py:149 pretix/base/reldate.py:238
 msgid "Fixed date:"
-msgstr "Bestemt dato"
+msgstr "Bestemt dato:"
 
 #: pretix/base/reldate.py:150 pretix/base/reldate.py:239
 msgid "Relative date:"
@@ -2939,6 +2939,17 @@ msgid ""
 "Best regards,\n"
 "Your {event} team"
 msgstr ""
+"Hej\n"
+"\n"
+"Vi har modtaget din bestilling til {event} med en samlet pris på "
+"{total_with_currency}. Gennemfør venligst betalingen før {date}.\n"
+"\n"
+"{payment_info}\n"
+"\n"
+"Du kan ændre din bestilling og dens status på {url}\n"
+"\n"
+"Venlig hilsen\n"
+"Arrangøren af {event}"
 
 #: pretix/base/settings.py:291
 #, python-brace-format
@@ -2969,6 +2980,16 @@ msgid ""
 "Best regards,\n"
 "Your {event} team"
 msgstr ""
+"Hej\n"
+"\n"
+"Vi har modtaget din betaling for {event}. Tak!\n"
+"\n"
+"{payment_info}\n"
+"\n"
+"Du kan ændre informationer og se status på din bestilling på {url}\n"
+"\n"
+"Venlig hilsen\n"
+"Arrangøren af {event}"
 
 #: pretix/base/settings.py:321
 #, python-brace-format
@@ -2985,6 +3006,16 @@ msgid ""
 "Best regards,\n"
 "Your {event} team"
 msgstr ""
+"Hej\n"
+"\n"
+"Vi har ikke modtaget betaling af din bestilling til {event}.\n"
+"Husk at vi kun kan garantere bestillingen hvis du betaler inden "
+"{expire_date}.\n"
+"\n"
+"Du kan se betalingsoplysninger og status for din bestilling på {url}\n"
+"\n"
+"Venlig hilsen\n"
+"Arrangøren af {event}"
 
 #: pretix/base/settings.py:335
 #, python-brace-format
@@ -3153,11 +3184,11 @@ msgstr "Skjul"
 
 #: pretix/base/templates/debug_toolbar/base.html:23
 msgid "Disable for next and successive requests"
-msgstr "Deaktiver for næste og kommende forespørgsler."
+msgstr "Deaktiver for næste og kommende forespørgsler"
 
 #: pretix/base/templates/debug_toolbar/base.html:23
 msgid "Enable for next and successive requests"
-msgstr "Aktiver for næste og kommende forespørgsler."
+msgstr "Aktiver for næste og kommende forespørgsler"
 
 #: pretix/base/templates/debug_toolbar/base.html:45
 msgid "Show toolbar"
@@ -3400,7 +3431,7 @@ msgid ""
 "price that needs to be paid"
 msgstr ""
 "Uafhængigt af dit valg, vil kurven vise bruttopriser idet det er prisen der "
-"faktisk skal betales."
+"faktisk skal betales"
 
 #: pretix/control/forms/event.py:265
 msgid "Show start date"
@@ -3408,7 +3439,7 @@ msgstr "Vis startdato"
 
 #: pretix/control/forms/event.py:266
 msgid "Show the presale start date before presale has started."
-msgstr "Vis start af forsalg før forsalget er startet"
+msgstr "Vis startdato for forsalg før forsalget er startet."
 
 #: pretix/control/forms/event.py:271
 msgid "Last date of modifications"
@@ -3436,7 +3467,7 @@ msgstr "Vis antal resterende billetter"
 #: pretix/control/forms/event.py:293
 msgid "Publicly show how many tickets of a certain type are still available."
 msgstr ""
-"Vis offentligt hvor mange billeter af en bestemt type der er tilgængelige"
+"Vis offentligt hvor mange billetter af en bestemt type der er tilgængelige."
 
 #: pretix/control/forms/event.py:297
 msgid "Enable waiting list"
@@ -3568,7 +3599,7 @@ msgstr "Kontaktadresse"
 
 #: pretix/control/forms/event.py:378
 msgid "Public email address for contacting the organizer"
-msgstr "Offentligt e-mailadresse der kan bruges til at kontakte arrangøren."
+msgstr "Offentligt e-mailadresse der kan bruges til at kontakte arrangøren"
 
 #: pretix/control/forms/event.py:381
 msgid "Allow users to cancel unpaid orders"
@@ -3613,6 +3644,8 @@ msgid ""
 "recommend 14 days. If you only use real-time payment methods, we recommend "
 "still setting two or three days to allow people to retry failed payments."
 msgstr ""
+"Antal dage efter bestilling som en kunde har til at betale for sin "
+"bestilling."
 
 #: pretix/control/forms/event.py:420
 msgid "Last date of payments"
@@ -4002,7 +4035,7 @@ msgid ""
 "by you."
 msgstr ""
 "Alle mails i forbindelse med dit arrangement sendes via brugerdefineret SMTP-"
-"server"
+"server."
 
 #: pretix/control/forms/event.py:776
 msgid "Hostname"
@@ -4094,7 +4127,7 @@ msgstr "Tilbyd separate downloads af billetter til tilføjelsesprodukter"
 
 #: pretix/control/forms/event.py:880
 msgid "Generate tickets for non-admission products"
-msgstr "Generer billetter for produkter der ikke er adgangsgivende."
+msgstr "Generer billetter for produkter der ikke er adgangsgivende"
 
 #: pretix/control/forms/event.py:922
 msgid "Any country"
@@ -4258,7 +4291,7 @@ msgstr "Alle"
 
 #: pretix/control/forms/filter.py:266 pretix/control/forms/filter.py:361
 msgid "Shop live and presale running"
-msgstr "Shop er live og forsalget er i gang."
+msgstr "Shop er live og forsalget er i gang"
 
 #: pretix/control/forms/filter.py:267 pretix/control/forms/filter.py:555
 msgid "Inactive"
@@ -4478,7 +4511,7 @@ msgstr "Antal billetter"
 
 #: pretix/control/forms/item.py:267
 msgid "Quota name is required."
-msgstr "Navn på kvote er påkrævet"
+msgstr "Navn på kvote er påkrævet."
 
 #: pretix/control/forms/item.py:272
 msgid "Please select a quota."
@@ -5535,7 +5568,7 @@ msgstr ""
 
 #: pretix/control/templates/pretixcontrol/checkin/index.html:121
 msgid "Check-In selected attendees"
-msgstr "Tjek valgte deltager ind."
+msgstr "Tjek valgte deltager ind"
 
 #: pretix/control/templates/pretixcontrol/checkin/list_delete.html:4
 #: pretix/control/templates/pretixcontrol/checkin/list_delete.html:6
@@ -6337,7 +6370,7 @@ msgstr ""
 
 #: pretix/control/templates/pretixcontrol/event/widget.html:49
 msgid "Read our documentation for more information"
-msgstr "Læs vores dokumentation for yderligere information."
+msgstr "Læs vores dokumentation for yderligere information"
 
 #: pretix/control/templates/pretixcontrol/event/widget.html:54
 msgid ""
@@ -6544,7 +6577,7 @@ msgstr "Tilføj ny udvidelse"
 
 #: pretix/control/templates/pretixcontrol/item/base.html:6
 msgid "Modify product:"
-msgstr "Rediger produkt"
+msgstr "Rediger produkt:"
 
 #: pretix/control/templates/pretixcontrol/item/base.html:22
 msgid "Add-Ons"
@@ -6714,7 +6747,7 @@ msgstr "Kun synlig med en voucher"
 
 #: pretix/control/templates/pretixcontrol/items/index.html:75
 msgid "Can only bought using a voucher"
-msgstr "Kan kun købes med en voucher."
+msgstr "Kan kun købes med en voucher"
 
 #: pretix/control/templates/pretixcontrol/items/question.html:6
 #: pretix/control/templates/pretixcontrol/items/question.html:9
@@ -8631,7 +8664,7 @@ msgstr "Det valgte spørgsmål er blevet slettet."
 
 #: pretix/control/views/item.py:418
 msgid "File uploaded"
-msgstr "Fil uploadet."
+msgstr "Fil uploadet"
 
 #: pretix/control/views/item.py:539
 msgid "The new question has been created."
@@ -8709,7 +8742,7 @@ msgstr "CVR-nummeret kun ikke valideres idet et ikke-EU-land er angivet."
 
 #: pretix/control/views/orders.py:326
 msgid "This VAT ID is not valid."
-msgstr "Dette CVR-nr. er ikke gyldigt"
+msgstr "Dette CVR-nr. er ikke gyldigt."
 
 #: pretix/control/views/orders.py:329
 msgid ""
@@ -9142,7 +9175,7 @@ msgstr "Transaktionsbeløbet er ikke korrekt."
 #: pretix/plugins/banktransfer/tasks.py:77
 #: pretix/plugins/banktransfer/views.py:86
 msgid "Problem sending email."
-msgstr "Problem med udsendelse af e-mail"
+msgstr "Problem med udsendelse af e-mail."
 
 #: pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/checkout_payment_form.html:3
 msgid ""
@@ -9644,7 +9677,7 @@ msgstr "Samlet værdi"
 #: pretix/plugins/paypal/templates/pretixplugins/paypal/control.html:26
 #: pretix/plugins/stripe/templates/pretixplugins/stripe/control.html:49
 msgid "Currency"
-msgstr "valuta"
+msgstr "Valuta"
 
 #: pretix/plugins/paypal/templates/pretixplugins/paypal/pending.html:4
 msgid ""
@@ -10280,7 +10313,7 @@ msgstr "Opkrævning opdateret."
 
 #: pretix/plugins/stripe/signals.py:55
 msgid "Charge pending"
-msgstr "Opkrævning afventer."
+msgstr "Opkrævning afventer"
 
 #: pretix/plugins/stripe/signals.py:56
 msgid "Payment authorized."
@@ -10694,7 +10727,7 @@ msgstr "Tekstindhold"
 
 #: pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/index.html:287
 msgid "Event attribute:"
-msgstr "Arrangementsegenskab"
+msgstr "Arrangementsegenskab:"
 
 #: pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/index.html:290
 msgid "Other…"
@@ -11712,7 +11745,7 @@ msgstr ""
 
 #: pretix/presale/views/waiting.py:57
 msgid "Waiting lists are disabled for this event."
-msgstr "Venteliste er ikke tilgængelig for dette arrangement"
+msgstr "Venteliste er ikke tilgængelig for dette arrangement."
 
 #: pretix/presale/views/waiting.py:61
 msgid "We could not identify the product you selected."
