--- a/src/pretix/locale/fr/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/fr/LC_MESSAGES/djangojs.po
@@ -6,11 +6,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: French\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-26 11:13+0000\n"
-"PO-Revision-Date: 2018-03-08 15:58+0000\n"
+"POT-Creation-Date: 2018-01-06 21:48+0000\n"
+"PO-Revision-Date: 2018-03-20 22:58+0000\n"
 "Last-Translator: Claude <superoxyde@laposte.net>\n"
-"Language-Team: French <https://translate.pretix.eu/projects/pretix/pretix-js/"
-"fr/>\n"
+"Language-Team: French <https://translate.pretix.eu/projects/pretix/pretix-"
+"js/fr/>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,95 +21,77 @@ msgstr ""
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:56
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:62
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:68
-#, fuzzy
 msgid "Marked as paid"
 msgstr "Marqué comme payé"
 
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:76
-#, fuzzy
 msgid "Comment:"
 msgstr "Commentaire:"
 
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:9
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:32
-#, fuzzy
 msgid "Placed orders"
 msgstr "Commandes passées"
 
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:9
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:32
-#, fuzzy
 msgid "Paid orders"
 msgstr "Ordres payés"
 
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:21
-#, fuzzy
 msgid "Total revenue"
 msgstr "Revenu total"
 
 #: pretix/plugins/stripe/static/pretixplugins/stripe/pretix-stripe.js:10
-#, fuzzy
 msgid "Contacting Stripe …"
 msgstr "Contacter Stripe ..."
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:21
-#, fuzzy
 msgid "QR Code"
 msgstr "QR Code"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:210
-#, fuzzy
 msgid "The PDF background file could not be loaded for the following reason:"
 msgstr ""
 "Le fichier d'arrière-plan PDF n' a pas pu être chargé pour la raison "
 "suivante:"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:359
-#, fuzzy
 msgid "Group of objects"
 msgstr "Groupe d'objets"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:365
-#, fuzzy
 msgid "Text object"
 msgstr "Objet texte"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:367
-#, fuzzy
 msgid "Barcode area"
 msgstr "Zone de code-barres"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:369
-#, fuzzy
 msgid "Object"
 msgstr "Objet"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:373
-#, fuzzy
 msgid "Ticket design"
 msgstr "Conception des billets"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:609
-#, fuzzy
 msgid "Saving failed."
 msgstr "L'enregistrement a échoué."
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:656
-#, fuzzy
 msgid "Do you really want to leave the editor without saving your changes?"
 msgstr ""
 "Voulez-vous vraiment quitter l'éditeur sans sauvegarder vos modifications ?"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:670
-#, fuzzy
 msgid "Error while uploading your PDF file, please try again."
-msgstr ""
-"Erreur lors du téléchargement de votre fichier PDF, veuillez réessayer."
+msgstr "Erreur lors du téléchargement de votre fichier PDF, veuillez réessayer."
 
 #: pretix/static/pretixbase/js/asyncdownload.js:28
 #: pretix/static/pretixbase/js/asynctask.js:42
 #: pretix/static/pretixbase/js/asynctask.js:94
-#, fuzzy
 msgid ""
 "Your request has been queued on the server and will now be processed. If "
 "this takes longer than two minutes, please contact us or go back in your "
@@ -123,19 +105,16 @@ msgstr ""
 #: pretix/static/pretixbase/js/asynctask.js:62
 #: pretix/static/pretixbase/js/asynctask.js:116
 #: pretix/static/pretixcontrol/js/ui/mail.js:23
-#, fuzzy
 msgid "An error of type {code} occurred."
 msgstr "Une erreur de type {code} s'est produite."
 
 #: pretix/static/pretixbase/js/asyncdownload.js:54
 #: pretix/static/pretixbase/js/asynctask.js:137
-#, fuzzy
 msgid "We are processing your request …"
 msgstr "Nous traitons votre demande ..."
 
 #: pretix/static/pretixbase/js/asyncdownload.js:55
 #: pretix/static/pretixbase/js/asynctask.js:138
-#, fuzzy
 msgid ""
 "We are currently sending your request to the server. If this takes longer "
 "than one minute, please check your internet connection and then reload this "
@@ -147,7 +126,6 @@ msgstr ""
 
 #: pretix/static/pretixbase/js/asynctask.js:38
 #: pretix/static/pretixbase/js/asynctask.js:90
-#, fuzzy
 msgid ""
 "Your request has been queued on the server and will now be processed. "
 "Depending on the size of your event, this might take up to a few minutes."
@@ -156,7 +134,6 @@ msgstr ""
 "taille de votre événement, cela peut prendre jusqu' à quelques minutes."
 
 #: pretix/static/pretixbase/js/asynctask.js:65
-#, fuzzy
 msgid ""
 "We currently cannot reach the server, but we keep trying. Last error code: "
 "{code}"
@@ -166,13 +143,11 @@ msgstr ""
 
 #: pretix/static/pretixbase/js/asynctask.js:107
 #: pretix/static/pretixcontrol/js/ui/mail.js:20
-#, fuzzy
 msgid "The request took to long. Please try again."
 msgstr "La requête a prit trop de temps. Veuillez réessayer."
 
 #: pretix/static/pretixbase/js/asynctask.js:119
 #: pretix/static/pretixcontrol/js/ui/mail.js:25
-#, fuzzy
 msgid ""
 "We currently cannot reach the server. Please try again. Error code: {code}"
 msgstr ""
@@ -181,158 +156,132 @@ msgstr ""
 
 #: pretix/static/pretixbase/js/asynctask.js:174
 #: pretix/static/pretixcontrol/js/ui/main.js:28
-#, fuzzy
 msgid "Close message"
 msgstr "Fermer le message"
 
 #: pretix/static/pretixcontrol/js/clipboard.js:23
-#, fuzzy
 msgid "Copied!"
 msgstr "Copié !"
 
 #: pretix/static/pretixcontrol/js/clipboard.js:29
-#, fuzzy
 msgid "Press Ctrl-C to copy!"
 msgstr "Appuyez sur Ctrl-C pour copier !"
 
 #: pretix/static/pretixcontrol/js/ui/mail.js:18
-#, fuzzy
 msgid "An error has occurred."
 msgstr "Une erreur s'est produite."
 
 #: pretix/static/pretixcontrol/js/ui/mail.js:52
-#, fuzzy
 msgid "Generating messages …"
 msgstr "Création de messages ..."
 
 #: pretix/static/pretixcontrol/js/ui/main.js:43
-#, fuzzy
 msgid "Unknown error."
 msgstr "Erreur inconnue."
 
 #: pretix/static/pretixcontrol/js/ui/main.js:242
-#, fuzzy
 msgid "All"
 msgstr "Tous"
 
 #: pretix/static/pretixcontrol/js/ui/main.js:243
-#, fuzzy
 msgid "None"
 msgstr "Aucun"
 
 #: pretix/static/pretixcontrol/js/ui/question.js:41
-#, fuzzy
 msgid "Others"
 msgstr "Autres"
 
 #: pretix/static/pretixcontrol/js/ui/question.js:70
-#, fuzzy
 msgid "Count"
 msgstr "Compter"
 
 #: pretix/static/pretixpresale/js/ui/cart.js:39
-#, fuzzy
 msgid "The items in your cart are no longer reserved for you."
 msgstr "Les articles de votre panier ne vous sont plus réservés."
 
 #: pretix/static/pretixpresale/js/ui/cart.js:41
-#, fuzzy
 msgid "Cart expired"
 msgstr "Panier expiré"
 
 #: pretix/static/pretixpresale/js/ui/cart.js:46
-#, fuzzy
 msgid "The items in your cart are reserved for you for one minute."
 msgid_plural "The items in your cart are reserved for you for {num} minutes."
 msgstr[0] "Les articles de votre panier vous sont réservés pour une minute."
 msgstr[1] "Les articles de votre panier vous sont réservés pour {num} minutes."
 
 #: pretix/static/pretixpresale/js/widget/widget.js:9
-#, fuzzy
 msgctxt "widget"
 msgid "Sold out"
 msgstr "Epuisé"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:10
-#, fuzzy
 msgctxt "widget"
 msgid "Buy"
 msgstr "Acheter"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:11
-#, fuzzy
 msgctxt "widget"
 msgid "Reserved"
 msgstr "Réservé"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:12
-#, fuzzy
 msgctxt "widget"
 msgid "FREE"
 msgstr "GRATUIT"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:13
-#, fuzzy
 msgctxt "widget"
 msgid "from %(currency)s %(price)s"
 msgstr "de %(currency)s %(price)s"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:14
-#, fuzzy
 msgctxt "widget"
 msgid "incl. %(rate)s% %(taxname)s"
 msgstr "incl. %(rate)s% %(taxname)s"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:15
-#, fuzzy
 msgctxt "widget"
 msgid "plus %(rate)s% %(taxname)s"
 msgstr "plus %(rate)s% %(taxname)s"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:16
-#, fuzzy, javascript-format
+#, javascript-format
 msgctxt "widget"
 msgid "currently available: %s"
 msgstr "actuellement disponible: %s"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:17
-#, fuzzy
 msgctxt "widget"
 msgid "Only available with a voucher"
 msgstr "Disponible avec un bon de réduction"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:18
-#, fuzzy, javascript-format
+#, javascript-format
 msgctxt "widget"
 msgid "minimum amount to order: %s"
 msgstr "quantité minimum à commander: %s"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:19
-#, fuzzy
 msgctxt "widget"
 msgid "Close ticket shop"
 msgstr "Fermer la billetterie"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:20
-#, fuzzy
 msgctxt "widget"
 msgid "The ticket shop could not be loaded."
 msgstr "La billetterie n' a pas pu être chargée."
 
 #: pretix/static/pretixpresale/js/widget/widget.js:21
-#, fuzzy
 msgctxt "widget"
 msgid "The cart could not be created. Please try again later"
 msgstr "Le panier n' a pas pu être créé. Veuillez réessayer plus tard"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:22
-#, fuzzy
 msgctxt "widget"
 msgid "Waiting list"
 msgstr "Liste d'attente"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:23
-#, fuzzy
 msgctxt "widget"
 msgid ""
 "You currently have an active cart for this event. If you select more "
@@ -344,47 +293,40 @@ msgstr ""
 "sur ce message pour continuer votre commande avec votre panier."
 
 #: pretix/static/pretixpresale/js/widget/widget.js:26
-#, fuzzy
 msgctxt "widget"
 msgid ""
 "ticketing powered by <a href=\"https://pretix.eu\" target=\"_blank\" rel="
 "\"noopener\">pretix</a>"
 msgstr ""
-"généré par <a href=\"https://pretix.eu\" target=\"_blank\" rel=\"noopener"
-"\">pretix</a>"
+"généré par <a href=\"https://pretix.eu\" target=\"_blank\" rel=\"noopener\""
+">pretix</a>"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:27
-#, fuzzy
 msgctxt "widget"
 msgid "Redeem a voucher"
 msgstr "Utiliser un bon d'achat"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:28
-#, fuzzy
 msgctxt "widget"
 msgid "Redeem"
 msgstr "Echanger"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:29
-#, fuzzy
 msgctxt "widget"
 msgid "Voucher code"
 msgstr "Code de réduction"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:30
-#, fuzzy
 msgctxt "widget"
 msgid "Close"
 msgstr "Fermer"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:31
-#, fuzzy
 msgctxt "widget"
 msgid "Continue"
 msgstr "Continuer"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:32
-#, fuzzy
 msgctxt "widget"
 msgid "See variations"
 msgstr "Voir les variations"
