--- a/src/pretix/locale/de/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de/LC_MESSAGES/django.po
@@ -5,8 +5,8 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-03-16 11:32+0000\n"
-"PO-Revision-Date: 2018-03-24 04:00+0000\n"
-"Last-Translator: Felix Rindt <felix@rindt.me>\n"
+"PO-Revision-Date: 2018-03-26 11:25+0000\n"
+"Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: German "
 "<https://translate.pretix.eu/projects/pretix/pretix/de/>\n"
 "Language: de\n"
@@ -1392,6 +1392,9 @@ msgid ""
 "You can enter any value here to make it easier to match the data with other "
 "sources. If you do not input one, we will generate one automatically."
 msgstr ""
+"Sie können hier einen beliebigen Wert eintragen, der den Abgleich mit "
+"anderen Datenquellen vereinfacht. Wenn Sie nichts eingeben, wird ein "
+"automatischer Wert generiert."
 
 #: pretix/base/models/items.py:674
 msgid "Help text"
