--- a/src/pretix/locale/ar/LC_MESSAGES/django.po
+++ b/src/pretix/locale/ar/LC_MESSAGES/django.po
@@ -7,11 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-16 11:32+0000\n"
+"POT-Creation-Date: 2018-03-26 12:49+0000\n"
 "PO-Revision-Date: 2018-03-17 21:10+0000\n"
 "Last-Translator: OMar <omelgazzar@gmail.com>\n"
-"Language-Team: Arabic "
-"<https://translate.pretix.eu/projects/pretix/pretix/ar/>\n"
+"Language-Team: Arabic <https://translate.pretix.eu/projects/pretix/pretix/ar/"
+">\n"
 "Language: ar\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
