--- a/src/pretix/locale/da/LC_MESSAGES/django.po
+++ b/src/pretix/locale/da/LC_MESSAGES/django.po
@@ -3,11 +3,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-16 11:32+0000\n"
+"POT-Creation-Date: 2018-03-26 12:49+0000\n"
 "PO-Revision-Date: 2018-03-20 12:46+0000\n"
 "Last-Translator: Mikkel Ricky <rimi@aarhus.dk>\n"
-"Language-Team: Danish "
-"<https://translate.pretix.eu/projects/pretix/pretix/da/>\n"
+"Language-Team: Danish <https://translate.pretix.eu/projects/pretix/pretix/da/"
+">\n"
 "Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -8236,8 +8236,8 @@ msgid ""
 "%(amount)s</strong>."
 msgstr ""
 "Hvis du kan skabe kapacitet ved dit arrangement til alle personer på "
-"ventelisten, kan du potentielt sælge billetter for yderligere "
-"<strong>%(amount)s</strong>."
+"ventelisten, kan du potentielt sælge billetter for yderligere <strong>"
+"%(amount)s</strong>."
 
 #: pretix/control/templates/pretixcontrol/waitinglist/index.html:82
 msgid "All entries"
