--- a/src/pretix/locale/fr/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/fr/LC_MESSAGES/djangojs.po
@@ -6,11 +6,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: French\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-01-06 21:48+0000\n"
+"POT-Creation-Date: 2018-03-26 12:49+0000\n"
 "PO-Revision-Date: 2018-03-22 17:35+0000\n"
 "Last-Translator: Claude <superoxyde@laposte.net>\n"
-"Language-Team: French <https://translate.pretix.eu/projects/pretix/pretix-"
-"js/fr/>\n"
+"Language-Team: French <https://translate.pretix.eu/projects/pretix/pretix-js/"
+"fr/>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -87,7 +87,8 @@ msgstr ""
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:670
 msgid "Error while uploading your PDF file, please try again."
-msgstr "Erreur lors du téléchargement de votre fichier PDF, veuillez réessayer."
+msgstr ""
+"Erreur lors du téléchargement de votre fichier PDF, veuillez réessayer."
 
 #: pretix/static/pretixbase/js/asyncdownload.js:28
 #: pretix/static/pretixbase/js/asynctask.js:42
@@ -298,8 +299,8 @@ msgid ""
 "ticketing powered by <a href=\"https://pretix.eu\" target=\"_blank\" rel="
 "\"noopener\">pretix</a>"
 msgstr ""
-"généré par <a href=\"https://pretix.eu\" target=\"_blank\" rel=\"noopener\""
-">pretix</a>"
+"généré par <a href=\"https://pretix.eu\" target=\"_blank\" rel=\"noopener"
+"\">pretix</a>"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:27
 msgctxt "widget"
